--- a/index.html
+++ b/index.html
@@ -11,6 +11,32 @@
     <title>Calculator app</title>
 </head>
 <body>
-    text
+    <div class="background"></div>
+    <h1 class="first__heading">
+        elit<span class="first__heading--special">calculator</span> 
+    </h1>
+    <div class="container">
+        <textarea spellcheck="false"  cols="30" rows="10" class="textarea"></textarea>
+        <section class="buttons">
+            <section class="number_buttons">
+                <button class="button__number--1">1</button>
+                <button class="button__number--2">2</button>
+                <button class="button__number--3">3</button>
+                <button class="button__number--4">4</button>
+                <button class="button__number--5">5</button>
+                <button class="button__number--6">6</button>
+                <button class="button__number--7">7</button>
+                <button class="button__number--8">8</button>
+                <button class="button__number--9">9</button>
+                <button class="button__number--0">0</button>
+            </section>
+            <section class="operator__buttons">
+                
+            </section>
+        </section>
+
+
+
+    </div>
 </body>
 </html>
