--- a/index.html
+++ b/index.html
@@ -5,19 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" 
+        integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+
     <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
 
     <title>Calculator app</title>
 </head>
 <body>
-    <div class="background"></div>
+    <!--div class="background"></div-->
     <h1 class="first__heading">
         elit<span class="first__heading--special">calculator</span> 
     </h1>
     <div class="container">
-        <textarea spellcheck="false"  cols="30" rows="10" class="textarea"></textarea>
-        <section class="buttons">
+        <section class="textareas">
+            <textarea spellcheck="false"  cols="50" rows="" class="textarea__input"></textarea>
+        <textarea spellcheck="false"  class="textarea__answer"></textarea>
+        </section>
+        <section class="buttons__container">
             <section class="number_buttons">
                 <button class="button__number--1">1</button>
                 <button class="button__number--2">2</button>
@@ -31,7 +38,27 @@
                 <button class="button__number--0">0</button>
             </section>
             <section class="operator__buttons">
-                
+                <button class="button__plus">
+                    <i class="fas fa-plus button__plus--icon"></i>
+                </button>
+                <button class="button__minus">
+                    <i class="fas fa-minus button__minus--icon"></i>
+                </button>
+                <button class="button__times">
+                    <i class="fas fa-times button__times--icon"></i>
+                </button>
+                <button class="button__divide">
+                    <i class="fas fa-divide button__divide--icon"></i>
+                </button>
+                <button class="button__equal">
+                    <i class="fas fa-equals button__equal--icon"></i>
+                </button>
+                <button class="button__delete">
+                    <i class="fas fa-delete-left button__plus--icon"></i>
+                </button>
+                <button class="button__reset">
+                    <i class="fas fa-sync button__reset--icon"></i>
+                </button>
             </section>
         </section>
 
