--- a/index.html
+++ b/index.html
@@ -21,42 +21,42 @@
     </h1>
     <div class="container">
         <section class="textareas">
-            <textarea spellcheck="false"  cols="50" rows="" class="textarea__input"></textarea>
+            <textarea spellcheck="false" class="textarea__input"></textarea>
         <textarea spellcheck="false"  class="textarea__answer"></textarea>
         </section>
         <section class="buttons__container">
             <section class="number_buttons">
-                <button class="button__number--1">1</button>
-                <button class="button__number--2">2</button>
-                <button class="button__number--3">3</button>
-                <button class="button__number--4">4</button>
-                <button class="button__number--5">5</button>
-                <button class="button__number--6">6</button>
-                <button class="button__number--7">7</button>
-                <button class="button__number--8">8</button>
-                <button class="button__number--9">9</button>
-                <button class="button__number--0">0</button>
+                <button class="button__number--1 btn">1</button>
+                <button class="button__number--2 btn">2</button>
+                <button class="button__number--3 btn">3</button>
+                <button class="button__number--4 btn">4</button>
+                <button class="button__number--5 btn">5</button>
+                <button class="button__number--6 btn">6</button>
+                <button class="button__number--7 btn">7</button>
+                <button class="button__number--8 btn">8</button>
+                <button class="button__number--9 btn">9</button>
+                <button class="button__number--0 btn">0</button>
             </section>
             <section class="operator__buttons">
-                <button class="button__plus">
+                <button class="button__plus btn">
                     <i class="fas fa-plus button__plus--icon"></i>
                 </button>
-                <button class="button__minus">
+                <button class="button__minus btn">
                     <i class="fas fa-minus button__minus--icon"></i>
                 </button>
-                <button class="button__times">
+                <button class="button__times btn">
                     <i class="fas fa-times button__times--icon"></i>
                 </button>
-                <button class="button__divide">
+                <button class="button__divide btn">
                     <i class="fas fa-divide button__divide--icon"></i>
                 </button>
-                <button class="button__equal">
+                <button class="button__equal btn">
                     <i class="fas fa-equals button__equal--icon"></i>
                 </button>
-                <button class="button__delete">
+                <button class="button__delete btn">
                     <i class="fas fa-delete-left button__plus--icon"></i>
                 </button>
-                <button class="button__reset">
+                <button class="button__reset btn">
                     <i class="fas fa-sync button__reset--icon"></i>
                 </button>
             </section>
